// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component It should render a danger appearance 1`] = `
<DocumentFragment>
  <button
    class="ids-btn ids-btn--danger"
    data-test="ids-btn"
    title="Click me"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component It should render a ghost appearance 1`] = `
<DocumentFragment>
  <button
    class="ids-btn ids-btn--ghost"
    data-test="ids-btn"
    title="Click me"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component It should render a premium appearance 1`] = `
<DocumentFragment>
  <button
    class="ids-btn ids-btn--premium"
    data-test="ids-btn"
    title="Click me"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component It should render a primary appearance 1`] = `
<DocumentFragment>
  <button
    class="ids-btn"
    data-test="ids-btn"
    title="Click me"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Component It should render a secondary appearance 1`] = `
<DocumentFragment>
  <button
    class="ids-btn ids-btn--secondary"
    data-test="ids-btn"
    title="Click me"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;
